# ocaml-metadata

./: CHANGES.md  README.md  dune-project  index.html  metadata.opam
.github/workflows/: doc.yml  main.yml
examples/: Makefile  basic.ml  dump  dump.ml  dune  meta  meta.ml  test.ml
examples/id3v2/: README.md
examples/mp4/: base_tags.ml
metadata/: index.html
metadata/Metadata/: index.html
metadata/Metadata/AVI/: index.html
metadata/Metadata/AVI/R/: index.html
metadata/Metadata/Any/: index.html
metadata/Metadata/Audio/: index.html
metadata/Metadata/CharEncoding/: index.html
metadata/Metadata/CharEncoding/Naive/: index.html
metadata/Metadata/CharEncoding/module-type-T/: index.html
metadata/Metadata/FLAC/: index.html
metadata/Metadata/FLAC/R/: index.html
metadata/Metadata/ID3/: index.html
metadata/Metadata/ID3v1/: index.html
metadata/Metadata/ID3v1/R/: index.html
metadata/Metadata/ID3v2/: index.html
metadata/Metadata/ID3v2/R/: index.html
metadata/Metadata/ID3v2/String/: index.html
metadata/Metadata/Image/: index.html
metadata/Metadata/Int/: index.html
metadata/Metadata/JPEG/: index.html
metadata/Metadata/JPEG/R/: index.html
metadata/Metadata/MP4/: index.html
metadata/Metadata/MP4/R/: index.html
metadata/Metadata/Make/: index.html
metadata/Metadata/Make/AVI/: index.html
metadata/Metadata/Make/AVI/R/: index.html
metadata/Metadata/Make/Any/: index.html
metadata/Metadata/Make/Audio/: index.html
metadata/Metadata/Make/FLAC/: index.html
metadata/Metadata/Make/FLAC/R/: index.html
metadata/Metadata/Make/ID3/: index.html
metadata/Metadata/Make/ID3v1/: index.html
metadata/Metadata/Make/ID3v2/: index.html
metadata/Metadata/Make/Image/: index.html
metadata/Metadata/Make/Int/: index.html
metadata/Metadata/Make/JPEG/: index.html
metadata/Metadata/Make/MP4/: index.html
metadata/Metadata/Make/OGG/: index.html
metadata/Metadata/Make/PNG/: index.html
metadata/Metadata/Make/Reader/: index.html
metadata/Metadata/Make/Video/: index.html
metadata/Metadata/Make/argument-1-E/: index.html
metadata/Metadata/OGG/: index.html
metadata/Metadata/OGG/R/: index.html
metadata/Metadata/PNG/: index.html
metadata/Metadata/PNG/R/: index.html
metadata/Metadata/Reader/: index.html
metadata/Metadata/Video/: index.html
pdf/: Makefile  README.md  dune  pdf_meta.ml
src/: dune  metadata.ml  metadata.mli  metadataAVI.ml  metadataAVI.mli  metadataBase.ml  metadataBase.mli  metadataCharEncoding.ml  metadataCharEncoding.mli  metadataFLAC.ml  metadataFLAC.mli  metadataID3v1.ml  metadataID3v1.mli  metadataID3v2.ml  metadataID3v2.mli  metadataJPEG.ml  metadataJPEG.mli  metadataMIME.ml  metadataMP4.ml  metadataMP4.mli  metadataOGG.ml  metadataPDF.ml  metadataPNG.ml  metadataPNG.mli
test/: dune  test.ml
(+7 files in other folders)
